updated daily earning functionality

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
       "src": "/(.*)",
       "dest": "api/index.js"
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron/daily-earnings",
+      "schedule": "0 0 * * *"
+    }
   ]
 }
