--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.0",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
